--- a/index.html
+++ b/index.html
@@ -14,18 +14,22 @@
     <script src="script/main.js"></script>
   </head>
   <body>
-    <header></header>
+    <header>
+      <a href="">
+        <img src="./images/Logo.svg" alt="logo" />
+      </a>
+      <ul>
+        <li><a href="">Studio</a></li>
+        <li><a href="">Portfolio</a></li>
+        <li><a href="">Contacts</a></li>
+      </ul>
+      <ul>
+        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+        <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+      </ul>
+    </header>
     <main>
-      <section>
-        <ul>
-          <li><a href="http://"></a></li>
-          <li><a href="http://"></a></li>
-          <li><a href="http://"></a></li>
-          <li><a href="http://"></a></li>
-          <li><a href="http://"></a></li>
-          <li><a href="http://"></a></li>
-        </ul>
-      </section>
+      <section></section>
     </main>
     <footer></footer>
   </body>
