--- a/index.html
+++ b/index.html
@@ -28,9 +28,106 @@
         <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
       </ul>
     </header>
+
+    <section>
+      <div></div>
+      <h1>
+        Effective Solutions <br />
+        for Your Business
+      </h1>
+      <a href="">Order Service</a>
+    </section>
+
+    <section>
+      <ul>
+        <li>
+          <h2>Strategy</h2>
+          <p>
+            Our goal is to identify the business problem to walk away with the
+            perfect and creative solution.
+          </p>
+        </li>
+        <li>
+          <h2>Punctuality</h2>
+          <p>
+            Bring the key message to the brand's audience for the best price
+            within the shortest possible time.
+          </p>
+        </li>
+        <li>
+          <h2>Diligence</h2>
+          <p>
+            Research and confirm brands that present the strongest digital
+            growth opportunities and minimize risk.
+          </p>
+        </li>
+        <li>
+          <h2>Technologies</h2>
+          <p>
+            Design practice focused on digital experiences. We bring forth a
+            deep passion for problem-solving.
+          </p>
+        </li>
+      </ul>
+    </section>
+
     <main>
-      <section></section>
+      <h2>What are we doing</h2>
+      <ul>
+        <li>
+          <a href=""
+            ><img src="./images/img1.jpg" alt="foto 1" width="360"
+          /></a>
+        </li>
+        <li>
+          <a href=""
+            ><img src="./images/img2.jpg" alt="foto 2" width="360"
+          /></a>
+        </li>
+        <li>
+          <a href=""
+            ><img src="./images/img3.jpg" alt="foto 3" width="360"
+          /></a>
+        </li>
+      </ul>
     </main>
-    <footer></footer>
+
+    <section>
+      <div></div>
+      <h2>Our Team</h2>
+      <ul>
+        <li>
+          <img src="./images/img4.jpg" alt="foto 4" width="264" />
+          <h3>Mark Guerrero</h3>
+          <p>Product Designer</p>
+        </li>
+        <li>
+          <img src="./images/img5.jpg" alt="foto 5" width="264" />
+          <h3>Tom Ford</h3>
+          <p>Frontend Developer</p>
+        </li>
+        <li>
+          <img src="./images/img6.jpg" alt="foto 6" width="264" />
+          <h3>Camila Garcia</h3>
+          <p>Marketing</p>
+        </li>
+        <li>
+          <img src="./images/img7.jpg" alt="foto7" width="264" />
+          <h3>Daniel Wilson</h3>
+          <p>UI Designer</p>
+        </li>
+      </ul>
+    </section>
+
+    <footer>
+      <div></div>
+      <a href="">
+        <img src="./images/Logo.svg" alt="foto logo" />
+      </a>
+      <h2>
+        Increase the flow of customers and<br />sales for your business with
+        digital<br />marketing & growth solutions.
+      </h2>
+    </footer>
   </body>
 </html>
