--- a/index.html
+++ b/index.html
@@ -5,22 +5,29 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>BarberShop</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" type="text/css" media="screen" href="" />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      media="screen"
+      href="./style/style.css"
+    />
   </head>
   <body>
     <header>
-      <a href="">
-        <img src="./images/Logo.svg" alt="logo company" />
-      </a>
-      <ul>
-        <li><a href="">Studio</a></li>
-        <li><a href="">Portfolio</a></li>
-        <li><a href="">Contacts</a></li>
-      </ul>
-      <ul>
-        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
-      </ul>
+      <nav>
+        <a href="">
+          <img src="./images/Logo.svg" alt="logo company" />
+        </a>
+        <ul>
+          <li><a href="">Studio</a></li>
+          <li><a href="">Portfolio</a></li>
+          <li><a href="">Contacts</a></li>
+        </ul>
+        <ul>
+          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+          <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+        </ul>
+      </nav>
     </header>
     <main>
       <section>
