--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
           </li>
           <li>
             <a href=""
-              ><img src="./images/img3.jpg" alt="foto 3" width="360"
+              ><img src="./images/img3.jpg" alt="photo mobile site" width="360"
             /></a>
           </li>
         </ul>
@@ -101,22 +101,34 @@
         <h2>Our Team</h2>
         <ul>
           <li>
-            <img src="./images/img4.jpg" alt="foto 4" width="264" />
+            <img
+              src="./images/img4.jpg"
+              alt="photo Mark Guerrero"
+              width="264"
+            />
             <h3>Mark Guerrero</h3>
             <p>Product Designer</p>
           </li>
           <li>
-            <img src="./images/img5.jpg" alt="foto 5" width="264" />
+            <img src="./images/img5.jpg" alt="photo Tom Ford" width="264" />
             <h3>Tom Ford</h3>
             <p>Frontend Developer</p>
           </li>
           <li>
-            <img src="./images/img6.jpg" alt="foto 6" width="264" />
+            <img
+              src="./images/img6.jpg"
+              alt="photo Camila Garcia"
+              width="264"
+            />
             <h3>Camila Garcia</h3>
             <p>Marketing</p>
           </li>
           <li>
-            <img src="./images/img7.jpg" alt="foto7" width="264" />
+            <img
+              src="./images/img7.jpg"
+              alt="photo Daniel Wilson"
+              width="264"
+            />
             <h3>Daniel Wilson</h3>
             <p>UI Designer</p>
           </li>
@@ -127,7 +139,7 @@
     <footer>
       <div></div>
       <a href="">
-        <img src="./images/Logo.svg" alt="foto logo" />
+        <img src="./images/Logo.svg" alt="photo logo" />
       </a>
       <h2>
         Increase the flow of customers and<br />sales for your business with
