--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           Effective Solutions <br />
           for Your Business
         </h1>
-        <a href="">Order Service</a>
+        <input type="button" value="Order Service" />
       </section>
 
       <section>
