--- a/index.html
+++ b/index.html
@@ -15,19 +15,19 @@
   <body>
     <header>
       <nav>
-        <a href="">
-          <img src="./images/Logo.svg" alt="logo company" />
-        </a>
+        <a href="./index.html">WebStudio</a>
         <ul>
           <li><a href="">Studio</a></li>
           <li><a href="">Portfolio</a></li>
           <li><a href="">Contacts</a></li>
         </ul>
+      </nav>
+      <address>
         <ul>
           <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
           <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
         </ul>
-      </nav>
+      </address>
     </header>
     <main>
       <section>
@@ -36,34 +36,35 @@
           Effective Solutions <br />
           for Your Business
         </h1>
-        <input type="button" value="Order Service" />
+        <button type="button">Order Service</button>
       </section>
 
       <section>
+        <h2></h2>
         <ul>
           <li>
-            <h2>Strategy</h2>
+            <h3>Strategy</h3>
             <p>
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
           <li>
-            <h2>Punctuality</h2>
+            <h3>Punctuality</h3>
             <p>
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
           <li>
-            <h2>Diligence</h2>
+            <h3>Diligence</h3>
             <p>
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
           <li>
-            <h2>Technologies</h2>
+            <h3>Technologies</h3>
             <p>
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
@@ -138,13 +139,11 @@
 
     <footer>
       <div></div>
-      <a href="">
-        <img src="./images/Logo.svg" alt="photo logo" />
-      </a>
-      <h2>
+      <a href="./index.html">WebStudio</a>
+      <p>
         Increase the flow of customers and<br />sales for your business with
         digital<br />marketing & growth solutions.
-      </h2>
+      </p>
     </footer>
   </body>
 </html>
