--- a/index.html
+++ b/index.html
@@ -40,7 +40,6 @@
       </section>
 
       <section>
-        <h2></h2>
         <ul>
           <li>
             <h3>Strategy</h3>
@@ -141,8 +140,8 @@
       <div></div>
       <a href="./index.html">WebStudio</a>
       <p>
-        Increase the flow of customers and<br />sales for your business with
-        digital<br />marketing & growth solutions.
+        Increase the flow of customers and sales for your business with digital
+        marketing & growth solutions.
       </p>
     </footer>
   </body>
