--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
       </section>
 
       <section>
+        <h2 hidden>team motivations</h2>
         <ul>
           <li>
             <h3>Strategy</h3>
@@ -99,41 +100,40 @@
       <section>
         <div></div>
         <h2>Our Team</h2>
+
         <ul>
-          <ul>
-            <li>
-              <img
-                src="./images/img4.jpg"
-                alt="photo Mark Guerrero"
-                width="264"
-              />
-              <h3>Mark Guerrero</h3>
-              <p>Product Designer</p>
-            </li>
-            <li>
-              <img src="./images/img5.jpg" alt="photo Tom Ford" width="264" />
-              <h3>Tom Ford</h3>
-              <p>Frontend Developer</p>
-            </li>
-            <li>
-              <img
-                src="./images/img6.jpg"
-                alt="photo Camila Garcia"
-                width="264"
-              />
-              <h3>Camila Garcia</h3>
-              <p>Marketing</p>
-            </li>
-            <li>
-              <img
-                src="./images/img7.jpg"
-                alt="photo Daniel Wilson"
-                width="264"
-              />
-              <h3>Daniel Wilson</h3>
-              <p>UI Designer</p>
-            </li>
-          </ul>
+          <li>
+            <img
+              src="./images/img4.jpg"
+              alt="photo Mark Guerrero"
+              width="264"
+            />
+            <h3>Mark Guerrero</h3>
+            <p>Product Designer</p>
+          </li>
+          <li>
+            <img src="./images/img5.jpg" alt="photo Tom Ford" width="264" />
+            <h3>Tom Ford</h3>
+            <p>Frontend Developer</p>
+          </li>
+          <li>
+            <img
+              src="./images/img6.jpg"
+              alt="photo Camila Garcia"
+              width="264"
+            />
+            <h3>Camila Garcia</h3>
+            <p>Marketing</p>
+          </li>
+          <li>
+            <img
+              src="./images/img7.jpg"
+              alt="photo Daniel Wilson"
+              width="264"
+            />
+            <h3>Daniel Wilson</h3>
+            <p>UI Designer</p>
+          </li>
         </ul>
       </section>
     </main>
