--- a/index.html
+++ b/index.html
@@ -31,15 +31,12 @@
     </header>
     <main>
       <section>
-        <h1>
-          Effective Solutions <br />
-          for Your Business
-        </h1>
+        <h1>Effective Solutions for Your Business</h1>
         <button type="button">Order Service</button>
       </section>
 
       <section>
-        <h2>Motivations</h2>
+        <h2>1</h2>
         <ul>
           <li>
             <h3>Strategy</h3>
